[package]
name = "formatic"
description = "A Coff/Elf/Macho object file creator"
keywords = ["object", "elf", "coff", "macho"]
license = "MIT"
author = "Cr0a3"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = { version = "0.34.0", features = ["write"] }
